# useless_crate

./: Cargo.toml  README.md
src/: lib.rs  testbin.rs
